--- a/requirements2.txt
+++ b/requirements2.txt
@@ -6,7 +6,7 @@ tensorflow_datasets
 tushare
 jupyter
 ipykernel
-matplotlib==3.2.2
+matplotlib
 scikit-learn
 statsmodels
 backtrader
@@ -16,3 +16,7 @@ Pillow
 pyyaml
 simplejson==3.17.2
 backtrader
+sqlalchemy
+pymysql
+plotly
+kaleido
